# WordleSolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
src/Controllers/: solvercontroller.cpp  solvercontroller.h
src/Model/: entropycalculator.cpp  entropycalculator.h  indexedLetter.h  solver.cpp  solver.h
src/View/: AppBackground.qml  GlassPanel.qml  Theme.js  main.qml
src/View/Elements/: GlassPanel.qml  LetterField.qml  WBusyIndicator.qml  WText.qml
src/View/Panels/: GameAnswers.qml  GuessedLetters.qml  IncorrectLetters.qml  SolvedLetters.qml  WKeyboard.qml
src/qml/: AppBackground.qml  Main.qml
src/qml/Elements/: GlassPanel.qml  LetterField.qml  WBusyIndicator.qml  WText.qml
src/qml/Panels/: IncorrectLetters.qml  SolvedLetters.qml
